--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,26 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
     <string name="i_am_a_visitor">I am a visitor</string>
     <string name="i_am_visited_unit">I am a visited unit</string>
     <string name="role_changed">Role changed</string>
+    <string name="please_input_your_name">Please input your name</string>
+    <string name="name">Name</string>
+    <string name="please_enter_your_phone_number">
+        Please enter your phone number
+    </string>
+    <string name="tel">Tel</string>
+    <string name="other_info">Other info</string>
+    <string name="please_fill_in_what_you_want_to_prefill">
+        Please fill in what you want to pre-fill
+    </string>
+    <string name="fill_info_description">
+        Fill in the information only for quick form filling,
+        App will not access or distribute your personal information
+    </string>
+    <string name="edit">Edit</string>
+    <string name="save">Save</string>
 </resources>
